# django_tutorials

./: db.sqlite3  pyproject.toml
common/: models.py
config/: settings.py  urls.py
feeds/: models.py  serializers.py  urls.py  views.py
feeds/migrations/: 0001_initial.py  0002_initial.py  0003_rename_users_feed_user.py
polls/: views.py
polls/migrations/: 0001_initial.py
reviews/: models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
